# chess-personality

./: .gitignore  CLAUDE.md  README.md  chess-personality-spec.md  fen2board.py  notes.md  pgn2fen.py  pgn_parser.py  prompt-plan.md  pyproject.toml  test.pgn  vectorization.py
concat_master_games/: Aronian.pgn  Caruana.pgn  Ding.pgn  Giri.pgn  Kramnik.pgn  Nepomniachtchi.pgn  So.pgn  VachierLagrave.pgn
papers/: Detecting individual decision-making style- exploring behavioral stylometry in chess.txt  Maia-2_ A Unified Model for Human-AI Alignment in Chess.html
